[gd_scene load_steps=18 format=3 uid="uid://bkc2shbl0u2lx"]

[ext_resource type="Script" path="res://Scripts/mockup_enemy.gd" id="1_c0r3o"]
[ext_resource type="Texture2D" uid="uid://cio1w3a63cyqw" path="res://Textures/Characters/kaball-fuse.png" id="2_jj5q2"]
[ext_resource type="Texture2D" uid="uid://1acrrntuytub" path="res://Textures/exc_mark.png" id="2_tgg5h"]
[ext_resource type="Script" path="res://Scripts/health_component.gd" id="3_re44b"]
[ext_resource type="Script" path="res://Scripts/detection_component.gd" id="4_5ktx4"]
[ext_resource type="Script" path="res://Scripts/hitbox_component.gd" id="5_wa6e1"]
[ext_resource type="Script" path="res://Scripts/health_ui.gd" id="6_f7h6q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vb460"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xsabh"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_r616w"]
radius = 303.323

[sub_resource type="Animation" id="Animation_ktrs2"]
resource_name = "Invincible"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ballsprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_b1lha"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ballsprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oe0n7"]
_data = {
"Invincible": SubResource("Animation_ktrs2"),
"RESET": SubResource("Animation_b1lha")
}

[sub_resource type="Animation" id="Animation_8a8h2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("excmark:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_n3haw"]
resource_name = "can_dash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("excmark:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1spgf"]
_data = {
"RESET": SubResource("Animation_8a8h2"),
"can_dash": SubResource("Animation_n3haw")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_13g7k"]
radius = 20.0

[node name="mockup_enemy" type="StaticBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_c0r3o")
count = 6
bullet_speed = 3.0
cooldown_period = 2.0
bullet_buffer = 0.2

[node name="excmark" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 2
position = Vector2(-11, -14)
scale = Vector2(2, 2)
texture = ExtResource("2_tgg5h")

[node name="ballsprite" type="Sprite2D" parent="."]
texture = ExtResource("2_jj5q2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_vb460")
debug_color = Color(3.25056e-08, 0.193739, 0.231715, 0.42)

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = false
collision_mask = 7

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("animationplayer")]
script = ExtResource("3_re44b")
max_health = 60.0
inv_frames = 3
animationplayer = NodePath("../AnimationPlayer")

[node name="DetectionComponent" type="Node2D" parent="." node_paths=PackedStringArray("raycast")]
script = ExtResource("4_5ktx4")
raycast = NodePath("../RayCast2D")

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("healthcomponent")]
collision_layer = 8
collision_mask = 4
script = ExtResource("5_wa6e1")
healthcomponent = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_xsabh")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_r616w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oe0n7")
}

[node name="AnimationPlayerMark" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1spgf")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -19.0
offset_top = -44.0
offset_right = 21.0
offset_bottom = 23.0

[node name="healthUI" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_right = 25.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "health"
script = ExtResource("6_f7h6q")

[node name="keep_track" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="keep_track"]
scale = Vector2(25, 25)
shape = SubResource("CircleShape2D_13g7k")

[connection signal="lost_health" from="HealthComponent" to="Control/healthUI" method="_on_health_component_lost_health"]
[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="body_entered" from="Area2D" to="DetectionComponent" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="keep_track" to="DetectionComponent" method="_on_keep_track_body_entered"]
[connection signal="body_exited" from="keep_track" to="DetectionComponent" method="_on_keep_track_body_exited"]
